[project]
name = "dddetailer"
version = "23.5.0"
description = "An object detection and auto-mask extension for Stable Diffusion web UI."
authors = [
    {name = "dowon", email = "ks2515@naver.com"},
]
requires-python = ">=3.8,<3.12"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
repository = "https://github.com/Bing-su/dddetailer"

[tool.isort]
profile = "black"
known_first_party = ["modules", "launch"]

[tool.black]
line-length = 120

[tool.ruff]
select = ["A", "B", "C4", "E", "F", "I001", "ISC", "N", "PIE", "PT", "RET", "SIM", "UP", "W"]
ignore = ["B008", "B905", "E501"]
unfixable = ["F401"]
line-length = 120

[tool.ruff.isort]
known-first-party = ["modules", "launch"]
